--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,52 +18,49 @@ body {
     text-decoration: underline;
 }
 
+.navbar img{
+    margin-right: 5px;
+    border-radius: 13px;
+}
 
 
 /* home-view */
 .jumbotron-container {
     background-color: rgba(207, 84, 27, 0.598);
     margin-top: 100px !important;
-    border-radius: 5px;
+    border-radius: 9px;
+    position: relative;
+    transition: box-shadow 0.3s;
+}
+.jumbotron-container:hover {
+    box-shadow: 0 0 20px rgba(33, 150, 243, 0.7);
+    background-color: rgba(209, 98, 47, 0.598);
 }
 .jumbotron-text {
     color: #000000;
     text-align: center;
     padding: 120px 0;
+    transition: transform 0.4s;
 }
+.jumbotron-container:hover .jumbotron-text{
+    transform: scale(1.1);
+}
+
 .jumbotron-image {
     background-image: url('../img/2.jpeg');
     background-size: cover;
     background-position: center;
-    height: 100%; 
+    height: 90%; 
     max-width: 80%; 
     margin: auto; 
-    margin-top: 20px;
-    border-radius: 10px;
-    transform: perspective(1000px) rotateY(-10deg);
+    margin-top: 15px;
+    border-radius: 8px;
+    transform: perspective(1200px) rotateY(-10deg);
     transition: transform 0.5s ease;
+    padding: 10px;
 }
-.jumbotron-image:hover {
-    transform: scale(1.1);
-}
-.cimol{
-    margin-top: 6em;
-    margin-bottom: 5em;
-}
-.cimol .col {
-    background: linear-gradient(to right, #ffa600a1, #ff00005e);
-    color: #000;
-    padding: 20px; 
-    border-radius: 10px; 
-    margin-bottom: 20px; 
-    transition: transform 0.4s ease;
-    margin-right: 20px;
-}
-.cimol .col:last-child {
-    margin-right: 0;
-}
-.cimol .col:hover {
-    transform: scale(1.1);
+.jumbotron-container:hover .jumbotron-image{
+    transform: scale(1.05);
 }
 .service{
     margin-top: 5em;
